--- a/doc/README.erb
+++ b/doc/README.erb
@@ -13,13 +13,8 @@ plugin.
 
 = Included Plugins
 
-  NAME                 VER DESCRIPTION
-
-  bwk                    2 Brian Kernighan's articles from Daily Princetonian
-  freebsd-ports-update   2 News from FreeBSD ports
-  quora                 10 Last n answers (per-user) from Quora; requires nodejs 0.3.7+
-  econlib                1 Latest articles from econlib.org
-
+<% plugins.each { |i| %>  <%= i %>
+<% } %>
 
 = Installation
 
@@ -118,26 +113,4 @@ There are 2 method to get an Atom feed via HTTP:
 
 = License
 
-(The MIT License)
-
-Copyright (c) 2010 Alexander Gromnitsky.
-
-Permission is hereby granted, free of charge, to any person obtaining
-a copy of this software and associated documentation files (the
-'Software'), to deal in the Software without restriction, including
-without limitation the rights to use, copy, modify, merge, publish,
-distribute, sublicense, and/or sell copies of the Software, and to
-permit persons to whom the Software is furnished to do so, subject to
-the following conditions:
-
-The above copyright notice and this permission notice shall be
-included in all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND,
-EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
-MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
-IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
-CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
-TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
-SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-
+<%= File.read 'LICENSE' %>
